change referencias a lit-switch por lit-switch-dos

--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "@igmansilla/lit-switch",
+  "name": "@igmansilla/lit-switch-dos",
   "version": "0.1.0",
   "description": "A simple web component",
-  "main": "lit-switch.js",
-  "module": "lit-switch.js",
+  "main": "lit-switch-dos.js",
+  "module": "lit-switch-dos.js",
   "type": "module",
   "scripts": {
     "build": "echo \"This is not a TypeScript project, so no need to build.\"",
     "lint": "npm run lint:lit-analyzer && npm run lint:eslint",
     "lint:eslint": "eslint '**/*.js'",
-    "lint:lit-analyzer": "lit-analyzer lit-switch.js",
+    "lint:lit-analyzer": "lit-analyzer lit-switch-dos.js",
     "format": "prettier \"**/*.{cjs,html,js,json,md,ts}\" --ignore-path ./.eslintignore --write",
     "docs": "npm run docs:clean && npm run analyze && npm run docs:build && npm run docs:assets && npm run docs:gen",
     "docs:clean": "rimraf docs",
     "docs:gen": "eleventy --config=.eleventy.cjs",
     "docs:gen:watch": "eleventy --config=.eleventy.cjs --watch",
-    "docs:build": "rollup -c --file docs/lit-switch.bundled.js",
+    "docs:build": "rollup -c --file docs/lit-switch-dos.bundled.js",
     "docs:assets": "cp node_modules/prismjs/themes/prism-okaidia.css docs/",
     "docs:serve": "wds --root-dir=docs --node-resolve --watch",
     "analyze": "cem analyze --litelement --globs \"**/*.js\" --exclude docs",
@@ -27,7 +27,7 @@
     "test:watch": "wtr --watch",
     "test:prod": "MODE=prod wtr",
     "test:prod:watch": "MODE=prod wtr --watch",
-    "checksize": "rollup -c ; cat lit-switch.bundled.js | gzip -9 | wc -c ; rm lit-switch.bundled.js"
+    "checksize": "rollup -c ; cat lit-switch-dos.bundled.js | gzip -9 | wc -c ; rm lit-switch-dos.bundled.js"
   },
   "keywords": [
     "web-components",
